IMPALA-499: Allow parquet scanner to read files with mismatched schemas.

We've always supported the hive metadata having fewer columns but this change
will put NULLs for missing columns like the other scanners.

Change-Id: I92de1decd30357476bbeb27f4248239fe8d0c668
Reviewed-on: http://gerrit.ent.cloudera.com:8080/233
Tested-by: jenkins <kitchen-build@cloudera.com>
Reviewed-by: Nong Li <nong@cloudera.com>