tests/query_test/test_scanners_all_table_formats.py
@@ -86,9 +86,6 @@ class TestUnmatchedSchema(ImpalaTestSuite):
 
   def test_unmatched_schema(self, vector):
     table_format = vector.get_value('table_format')
-    if table_format.file_format  == 'parquet':
-      pytest.xfail('IMPALA-499')
-
     self.__create_test_table(vector)
     self.run_test_case('QueryTest/test-unmatched-schema', vector)
     self.__drop_test_table(vector)
